# Adk-practice

./: .env.example  .gitignore  Makefile  main.py  pyproject.toml
agents/: __init__.py
agents/orchestration_lab/: __init__.py  agent.py  config.py  main.py  metrics.py  schemas.py
agents/orchestration_lab/sub_agents/: __init__.py  calc_agent.py  convert_agent.py  stats_agent.py
agents/orchestration_lab/test_files/: multi_hop.test.json  single_hop.test.json  test_config.json
agents/orchestration_lab/tools/: __init__.py  arithmetic.py  statistics_ops.py  units.py
docs/superpowers/plans/: 2026-07-22-adk-orchestration-lab.md
docs/superpowers/specs/: 2026-07-22-adk-orchestration-lab-design.md
tests/: conftest.py  test_config.py  test_delegation_eval.py  test_eval_sets.py  test_metrics.py  test_no_network.py  test_root_agent.py  test_schemas.py  test_sub_agents.py  test_tools.py
